--- a/source code/qmdp-web/css/main.css
+++ b/source code/qmdp-web/css/main.css
@@ -145,23 +145,51 @@ body>section {
 100%
 {
 opacity
+
+
+
+
 :
+
+
  
+
+
 1;
 -webkit-transform
-:
- 
-scale
-(1);
 
-    
+
+
+
+:
+
+
+ 
+
+
+scale
+
+
+
+
+(1);
 transform
-:
- 
-scale
-(1);
 
-  
+
+
+
+:
+
+
+ 
+
+
+scale
+
+
+
+
+(1);
 }
 }
 @
@@ -175,30 +203,68 @@ keyframes scaleIn { 0% {
 100%
 {
 opacity
+
+
+
+
 :
+
+
  
+
+
 1;
 -webkit-transform
-:
- 
-scale
-(1);
 
-    
+
+
+
+:
+
+
+ 
+
+
+scale
+
+
+
+
+(1);
 -ms-transform
-:
- 
-scale
-(1);
 
-    
+
+
+
+:
+
+
+ 
+
+
+scale
+
+
+
+
+(1);
 transform
-:
- 
-scale
-(1);
 
-  
+
+
+
+:
+
+
+ 
+
+
+scale
+
+
+
+
+(1);
 }
 }
 
@@ -1060,15 +1126,23 @@ a.accordion-toggle  i {
 	-moz-border-radius: 25px;
 	-webkit-border-radius: 25px;
 	border-radius: 100%;
-	padding:15px;
-	border:solid 1px #222;
+	padding: 15px;
+	border: solid 1px #222;
 }
 
-.line{
+.line {
 	height: 2px;
 	border-bottom: 2px solid #777;
-	margin-top:17px;
+	margin-top: 17px;
 }
+
+.breadcrumb>li+li:before {
+	color: #CCCCCC;
+	content: "> ";
+	padding: 0 5px;
+}
+
+
 
 /******************
  404 page css
